--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
---extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.5.1+cu121
-torchvision==0.20.1+cu121
-torchaudio==2.5.1+cu121
+# WhisperX RunPod Serverless Requirements
+# CUDA 12.1 compatible versions
+
+# Core PyTorch stack for CUDA 12.1
+# Note: These are installed separately in Dockerfile with CUDA index
+# torch==2.1.0
+# torchvision==0.16.0
+# torchaudio==2.1.0
+
+# WhisperX and dependencies
 git+https://github.com/m-bain/whisperx.git
-ffmpeg-python
-requests
-aiohttp
-aiofiles
+
+# Audio processing
+ffmpeg-python==0.2.0
+
+# HTTP and async
+requests>=2.31.0
+aiohttp>=3.9.0
+aiofiles>=23.2.1
+
+# RunPod serverless SDK
+runpod>=1.6.0
+
+# Speaker diarization (optional, requires HF token)
+pyannote.audio>=3.1.0
+
+# Cog for prediction interface
+cog>=0.9.0
+
+# Additional utilities
+numpy>=1.24.0
