--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,9 @@
 git+https://github.com/m-bain/whisperX.git
 
 # Pin pyannote versions for VAD compatibility (old checkpoint needs 2.x)
+# pyannote.audio 2.1.1 will auto-install compatible pyannote.core (<5.0)
 pyannote.audio==2.1.1
 pyannote.pipeline==2.3
-pyannote.core==5.0.0
 
 # WhisperX core dependencies
 # ctranslate2>=3.20.0
