Use WhisperX v3.1.1 (stable tag) instead of invalid commit hash

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@
 torch==2.2.0+cu121
 torchaudio==2.2.0+cu121
 
-# WhisperX and pyannote (pinned to working versions)
-git+https://github.com/m-bain/whisperX.git@8f00339af7dcc9705ef40d97a1f40764b7cf555f
+# WhisperX and pyannote (stable compatible versions)
+git+https://github.com/m-bain/whisperX.git@v3.1.1
 pyannote.audio==3.1.1
 speechbrain==0.5.16
 
