--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,8 @@
 # WhisperX RunPod Serverless Requirements
-# Using verified configuration from whisperx-worker repo
-# https://github.com/kodxana/whisperx-worker
+# Using official WhisperX repo (handles all dependencies)
 
-# Core PyTorch stack - installed in Dockerfile
---extra-index-url https://download.pytorch.org/whl/cu121
-torch==2.2.0+cu121
-torchaudio==2.2.0+cu121
-
-# WhisperX and pyannote (compatible with torch 2.2)
-whisperx==3.1.5
-pyannote.audio==3.1.1
-speechbrain==0.5.16
+# WhisperX from main repo
+git+https://github.com/m-bain/whisperX.git
 
 # Audio processing
 ffmpeg-python==0.2.0
